# integrity-updater

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: main.yaml
ci/: requirements.txt
integrity_updater/: __init__.py
tests/: expected.html  test.html
